# MyPyTools

./: .gitignore  CMakeLists.txt  setup.py
src/finite-differences/: finite-differences.cpp
src/super-resolution/: main.cpp  test.py
tests/: srt.py
